refactoring MainView